--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "types": [
+      "node",
+      "@types/express"
+    ]
   },
   "include": [
     "typings/**/*.d.ts",
