--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "osins-utils",
-  "version": "0.0.23",
-  "description": "commons utils",
+  "version": "0.0.30",
+  "description": "osins uitls",
   "main": "dist/index.js",
-  "type": "module",
-  "module": "dist/index.esm.js",
   "types": "dist/typing/index.d.ts",
-  "repository": "git@github.com:osins/osins-utils.git",
-  "author": "richard",
-  "license": "Apache-2.0",
-  "licenses": [
-    {
-      "type": "Apache-2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
-    }
-  ],
-  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:osins/osins-utils.git"
+  },
   "scripts": {
-    "dev": "rollup -w --environment NODE_ENV:development -c scripts/rollup.config.ts --configPlugin typescript",
-    "build": "rimraf dist && tsc",
+    "dev": "rollup -w --environment NODE_ENV:development -c scripts/rollup.config.dev.ts --configPlugin typescript",
+    "build": "rollup --environment NODE_ENV:development -c scripts/rollup.config.prod.ts --configPlugin typescript",
     "x": "npm --no-git-tag-version version major",
     "y": "npm --no-git-tag-version version minor",
     "z": "npm --no-git-tag-version version patch",
@@ -33,27 +25,105 @@
     "pub:y": "npm run y && npm publish --access=public",
     "pub:z": "npm run z && npm publish --access=public"
   },
+  "author": "richard",
+  "license": "ISC",
+  "dependencies": {
+    "crypto-js": "^4.1.1"
+  },
   "devDependencies": {
-    "@rollup/plugin-alias": "^4.0.3",
+    "@codemirror/commands": "^6.2.0",
+    "@codemirror/lang-javascript": "^6.1.2",
+    "@codemirror/language": "^6.4.0",
+    "@codemirror/search": "^6.2.3",
+    "@codemirror/state": "^6.2.0",
+    "@codemirror/view": "^6.7.3",
+    "@jridgewell/sourcemap-codec": "^1.4.14",
+    "@microsoft/tsdoc-config": "^0.16.2",
+    "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-buble": "^1.0.1",
+    "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-strip": "^3.0.2",
+    "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "esbuild": "^0.17.11",
-    "node-resolve": "^1.3.4",
-    "rimraf": "^4.3.0",
-    "rollup": "^3.18.0",
-    "rollup-plugin-dts": "^5.2.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-filesize": "^10.0.0",
+    "@rollup/pluginutils": "^5.0.2",
+    "@types/crypto-js": "^4.1.1",
+    "@types/estree": "1.0.0",
+    "@types/node": "^14.18.36",
+    "@types/signal-exit": "^3.0.1",
+    "@types/yargs-parser": "^21.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "acorn": "^8.8.1",
+    "acorn-import-assertions": "^1.8.0",
+    "acorn-jsx": "^5.3.2",
+    "acorn-walk": "^8.2.0",
+    "buble": "^0.20.0",
+    "builtin-modules": "^3.3.0",
+    "chokidar": "^3.5.3",
+    "colorette": "^2.0.19",
+    "concurrently": "^7.6.0",
+    "core-js": "^3.27.1",
+    "date-time": "^4.0.0",
+    "es5-shim": "^4.6.7",
+    "es6-shim": "^0.35.7",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "eslint-plugin-vue": "^9.9.0",
+    "fixturify": "^3.0.0",
+    "flru": "^1.0.2",
+    "fs-extra": "^11.1.0",
+    "github-api": "^3.4.0",
+    "hash.js": "^1.1.7",
+    "husky": "^8.0.3",
+    "inquirer": "^9.1.4",
+    "is-reference": "^3.0.1",
+    "lint-staged": "^13.1.0",
+    "locate-character": "^2.0.5",
+    "magic-string": "^0.29.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "pinia": "^2.0.29",
+    "prettier": "^2.8.3",
+    "pretty-bytes": "^6.0.0",
+    "pretty-ms": "^8.0.0",
+    "requirejs": "^2.3.6",
+    "rollup": "^3.16.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-license": "^3.0.1",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "tslint": "^6.1.3",
-    "typescript": "^4.9.5"
+    "rollup-plugin-serve": "^2.0.2",
+    "rollup-plugin-string": "^3.0.0",
+    "rollup-plugin-thatworks": "^1.0.4",
+    "rollup-plugin-typescript": "^1.0.1",
+    "semver": "^7.3.8",
+    "shx": "^0.3.4",
+    "signal-exit": "^3.0.7",
+    "source-map": "^0.7.4",
+    "source-map-support": "^0.5.21",
+    "systemjs": "^6.13.0",
+    "terser": "^5.16.1",
+    "tslib": "^2.4.1",
+    "typedoc": "^0.23.26",
+    "typedoc-plugin-markdown": "^3.14.0",
+    "typescript": "^4.9.4",
+    "vitepress": "^1.0.0-alpha.44",
+    "vitepress-plugin-mermaid": "^2.0.8",
+    "vue": "^3.2.45",
+    "weak-napi": "^2.0.2",
+    "yargs-parser": "^21.1.1"
   },
-  "dependencies": {},
-  "browser": {
-    "crypto": false
+  "jest": {
+    "preset": "rollup-jest"
   }
 }
