--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ typings/
 
 # Optional npm cache directory
 .npm
+.package-lock.json
 
 # Optional eslint cache
 .eslintcache
@@ -71,6 +72,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 .yarn
+.yarn.lock
 
 # dotenv environment variables file
 .env
