--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "types": [
-      "node",
-      "@types/express"
+      "node"
     ]
   },
   "include": [
